--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "@wings-j/web-audio-wave",
   "version": "1.0.0",
+  "description": "Web audio wave",
+  "keywords": [
+    "web",
+    "audio",
+    "visualization"
+  ],
   "author": "wings-j",
-  "license": "GPL-3.0-or-later",
+  "license": "MIT",
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.js",
