--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@wings-j/web-audio-wave",
   "version": "1.0.1",
-  "description": "Web audio wave",
+  "description": "Web音频波形",
   "keywords": [
     "web",
     "audio",
     "visualization"
   ],
   "author": "wings-j",
-  "license": "MIT",
+  "license": "GPL-3.0-or-later",
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -17,7 +17,7 @@
     "dev": "rollup -c -w",
     "test": "jest",
     "build": "rollup -c",
-    "upload": "npm publish --access=public"
+    "release": "npm publish --access=public"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
@@ -25,10 +25,8 @@
     "@babel/plugin-transform-runtime": "^7.15.8",
     "@babel/preset-env": "^7.5.5",
     "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^21.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.4",
-    "@types/d3": "^7.1.0",
     "@types/jest": "^27.0.2",
     "babel-jest": "^27.2.2",
     "jest": "^27.2.2",
@@ -40,7 +38,6 @@
   },
   "dependencies": {
     "@babel/runtime-corejs3": "^7.15.4",
-    "core-js": "^3.18.2",
-    "d3": "^7.1.1"
+    "core-js": "^3.18.2"
   }
 }
