--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.js",
+  "browser": "dist/index.iife.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "dev": "rollup -c -w",
