--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.4",
     "@types/jest": "^27.0.2",
+    "@types/lodash-es": "^4.17.5",
     "babel-jest": "^27.2.2",
     "jest": "^27.2.2",
+    "lodash-es": "^4.17.21",
     "rollup": "^2.51.1",
     "rollup-plugin-typescript2": "^0.30.0",
     "ts-jest": "^27.0.5",
@@ -33,6 +35,7 @@
   },
   "dependencies": {
     "@babel/runtime-corejs3": "^7.15.4",
-    "core-js": "^3.18.2"
+    "core-js": "^3.18.2",
+    "lodash-es": "^4.17.21"
   }
 }
