--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@wings-j/web-audio-wave",
   "version": "1.1.1",
-  "description": "Web音频波形",
+  "description": "Web音频波形，频域可视化",
   "author": "wings-j",
   "license": "GPL-3.0-or-later",
   "type": "module",
